fix: video not showing in the homepage cards

--- a/js/packages/web/src/components/AuctionRenderCard/index.less
+++ b/js/packages/web/src/components/AuctionRenderCard/index.less
@@ -13,6 +13,10 @@
   padding-bottom: 100%;
   overflow: hidden;
   border-radius: 12px;
+  & > video {
+    max-width: 100%;
+    height: auto;
+  }
   @media (max-width: 1100px) {
     margin-left: 0;
   }
